Colab을 통해 생성됨

--- a/3_선형대수학.ipynb
+++ b/3_선형대수학.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "sBo9qFry8d4w",
         "outputId": "26213171-49c1-4393-dd63-41fccf392abd",
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "outputId": "94099172-aa65-47b2-ea62-74d000e46278",
         "colab": {
@@ -132,7 +132,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "KlVwv48r8d42",
         "outputId": "280ded27-e938-4950-d230-d936f57b28d7",
@@ -182,10 +182,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 2,
       "metadata": {
         "id": "4MQ32-6d8d42",
-        "outputId": "fd2ffd96-225d-4b5b-f2f2-9f65dc09708a",
+        "outputId": "362766d3-210a-4491-f735-67db809ec1e8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -212,8 +212,60 @@
         "# 벡터의 크기를 계산한 후 기존 벡터로 나눠준다.\n",
         "\n",
         "s=np.array([2,3,1])\n",
-        "v_hat01 = s / linalg.norm(s)\n",
-        "print(v_hat01)"
+        "v_hat01 = s / linalg.norm(s) # 기본 norm값은 유클리드 거리\n",
+        "print(v_hat01) #이게 단위 벡터?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "linalg.norm(v_hat01) #단위 벡터의 크기를 확인해서 이것이 1이 나오면 단위 벡터라는 것을 알 수 있다."
+      ],
+      "metadata": {
+        "id": "HpOuvstgdFhs",
+        "outputId": "2719af2e-d9ef-4c36-d3ee-62e282e40311",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "linalg.norm(s) #원점에서 (2,3,1)위치에 화살표를 그렸을 때 그 화살표의 길이"
+      ],
+      "metadata": {
+        "id": "AqYJyosDbsdH",
+        "outputId": "c2910575-4d28-4480-cdb9-cade148b7875",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.7416573867739413"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
       ]
     },
     {
@@ -344,27 +396,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "qZVW__MQ8d45",
-        "outputId": "2fcf60e8-ac56-446e-d028-9b4486644f94"
+        "outputId": "062adedb-9efb-497e-aefc-02ae73ab0ee4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0., 0.],\n",
-              "       [0., 0.]])"
+              "array([[1., 1.],\n",
+              "       [1., 1.]])"
             ]
           },
-          "execution_count": 11,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 6
         }
       ],
       "source": [
         "s = (2,2)\n",
+        "#np.zeros(s)=np.ones(s)\n",
         "np.zeros(s)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.zeros(5).shape"
+      ],
+      "metadata": {
+        "id": "TLFNWGDud-mT",
+        "outputId": "323b884d-5379-4a90-de21-92aeed41271b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(5,)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
       ]
     },
     {
