Colab을 통해 생성됨

--- a/3_선형대수학.ipynb
+++ b/3_선형대수학.ipynb
@@ -182,7 +182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "4MQ32-6d8d42",
         "outputId": "362766d3-210a-4491-f735-67db809ec1e8",
@@ -228,7 +228,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -254,7 +254,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -318,7 +318,8 @@
         "import numpy as np\n",
         "x=np.array([-6,-8])\n",
         "v_hat2 = x / (x**2).sum()**0.5\n",
-        "v_hat2"
+        "v_hat2\n",
+        "#(x**2)은 각 원소를 제곱하는것) .sum()이건 제곱한것을 합침, **0.5는 루트를 표시한것"
       ]
     },
     {
@@ -396,7 +397,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "qZVW__MQ8d45",
         "outputId": "062adedb-9efb-497e-aefc-02ae73ab0ee4",
@@ -435,7 +436,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -478,21 +479,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "y0rUTHfE8d46",
-        "outputId": "89a1b8b1-2eae-4637-f9d0-e9fc741288bb"
+        "outputId": "3abd6993-cc7b-4644-c866-ac831ce95c78",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "2"
             ]
           },
-          "execution_count": 13,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 1
         }
       ],
       "source": [
@@ -506,21 +510,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "P1aKbveU8d47",
-        "outputId": "d7edf724-59e8-4442-ca45-2b5e1c3a3f09"
+        "outputId": "a8a29fb0-b165-4e60-8c81-23e36b33b1ea",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "1"
             ]
           },
-          "execution_count": 14,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 2
         }
       ],
       "source": [
@@ -557,21 +564,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "6GtfFwoX8d47",
-        "outputId": "2e626768-1ea0-4764-d60c-66ce3b2540cd"
+        "outputId": "6b92c502-27b9-440f-90c9-527b608bf378",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "1"
-            ]
-          },
-          "execution_count": 16,
-          "metadata": {},
-          "output_type": "execute_result"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 2]\n",
+            " [3 6]]\n"
+          ]
         }
       ],
       "source": [
@@ -1144,16 +1152,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "WDmlXbtB8d4_",
-        "outputId": "e2a91c8c-5802-4e6d-de58-faa340c2af86"
+        "outputId": "7698ee4d-a450-46f2-b4e5-fdb0203da516",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
+            "-75\n",
             "-75\n"
           ]
         }
